AA-256: Fixed the rtc date picker not showing the full drop-down

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,9 +6,21 @@
 }
 
 html, body {
-  padding: 0;
-  padding-top: 29px;
+  height: 100%;
+}
 
+
+.navbar-fixed-bottom{
+    height: 30px; /* must not use percents here, must be 60px*/    
+}
+
+#main-content {
+    position: fixed;
+    top: 54px;
+    bottom: 54px;
+    left: 0;
+    right: 0;
+    overflow:auto;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -34,7 +46,7 @@ html, body {
 
 /* Custom page footer */
 .footer {
-  padding-top: 7px;
+  /* padding-top: 7px; */
   color: #777;
   border-top: 1px solid #e5e5e5;
 }
@@ -60,18 +72,6 @@ html, body {
 .marketing p + h4 {
   margin-top: 28px;
 }
-
-  /* main content is the container between header and footer */
-  #main-content{
-    height: auto;
-    margin-bottom: 25px;
-  }
-
-  #patient-dashboard{
-    height: auto;
-
-  }
-
 
  .markDeceased {
       color: red;
